--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     font-family: 'Inter', sans-serif;
 
-  
+
 }
 
 html {
@@ -62,7 +62,8 @@ header {
     border: none;
     padding: 10px 15px;
     border-radius: 5px;
-    background-color: #E0700D;;
+    background-color: #E0700D;
+    ;
 }
 
 .login-button button a {
@@ -84,37 +85,46 @@ header {
     .nav-bar {
         padding: 1.5rem 4rem;
     }
+
     .nav-item {
         display: none;
     }
+
     .login-button {
         display: none;
     }
+
     .mobile-menu-icon {
         display: block;
     }
+
     .mobile-menu-icon button {
         background-color: transparent;
         border: none;
         cursor: pointer;
     }
+
     .mobile-menu ul {
         display: flex;
         flex-direction: column;
         text-align: center;
         padding-bottom: 1rem;
     }
+
     .mobile-menu .nav-item {
         display: block;
         padding-top: 1.2rem;
     }
+
     .mobile-menu .login-button {
         display: block;
         padding: 1rem 2rem;
     }
+
     .mobile-menu .login-button button {
         width: 100%;
     }
+
     .open {
         display: block;
     }
@@ -125,94 +135,94 @@ header {
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  font-family: 'Inter', sans-serif; 
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
-  line-height: 1.8;
-  font-size: 16px;
-  color: rgba(0, 0, 0, 0.8);
-  overflow-x: hidden;
+    line-height: 1.8;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.8);
+    overflow-x: hidden;
 }
 
 h1,
 h2,
 h3 {
-  font-weight: 700;
-  margin: 0;
-  color: #232323;
+    font-weight: 700;
+    margin-bottom: 50px;
+    color: #232323;
 }
 
 /* Estilização dos textos no overlay */
 .text-color {
-  color: #e0700d;
+    color: #e0700d;
 }
 
 .text-color1 {
-  color: white;
+    color: white;
 }
 
 .text-color2 {
-  color: #e0700d;
-  font-size: 40px;
-  font-weight: 400; 
-  margin-top: 10px;
-  display: block;
-  text-align: center;
+    color: #e0700d;
+    font-size: 40px;
+    font-weight: 400;
+    margin-top: 10px;
+    display: block;
+    text-align: center;
 }
 
 /* Swiper e Overlay */
 .swiper {
-  width: 100%;
-  height: 100vh;
-  position: relative;
+    width: 100%;
+    height: 100vh;
+    position: relative;
 }
 
 .swiper-slide img {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  filter: brightness(70%);
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    filter: brightness(70%);
 }
 
 /* Overlay */
 .overlay {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: white;
-  padding: 20px;
-  z-index: 1; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    padding: 20px;
+    z-index: 1;
 }
 
 /* Título e subtítulo */
 .overlay h1 {
-  font-size: 70px; 
-  margin-bottom: 10px;
+    font-size: 70px;
+    margin-bottom: 10px;
 }
 
 .overlay h2 {
-  font-size: 40px; 
-  margin-top: 20px;
+    font-size: 40px;
+    margin-top: 20px;
 }
 
 /* Contêiner para o botão e o texto */
 .overlay-container {
-  display: flex;
-  flex-direction: column; 
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  z-index: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    z-index: 10;
 }
 
 
@@ -221,34 +231,34 @@ h3 {
 
 /* Para telas pequenas (mobile) */
 @media (max-width: 768px) {
-  .overlay h1 {
-    font-size: 40px; 
-  }
+    .overlay h1 {
+        font-size: 40px;
+    }
 
-  .overlay h2 {
-    font-size: 20px; 
-  }
+    .overlay h2 {
+        font-size: 20px;
+    }
 
-  .btn-main {
-    margin-top: 15px; 
-    font-size: 0.9rem; 
-    z-index: 20; 
-  }
+    .btn-main {
+        margin-top: 15px;
+        font-size: 0.9rem;
+        z-index: 20;
+    }
 }
 
 /* Para telas grandes (desktop) */
 @media (min-width: 769px) {
-  .overlay h1 {
-    font-size: 70px; 
-  }
+    .overlay h1 {
+        font-size: 70px;
+    }
 
-  .overlay h2 {
-    font-size: 40px; 
-  }
+    .overlay h2 {
+        font-size: 40px;
+    }
 
-  .btn-main {
-    font-size: 1rem; 
-  }
+    .btn-main {
+        font-size: 1rem;
+    }
 }
 
 /* Frase Inspiradora */
@@ -259,7 +269,7 @@ h3 {
 }
 
 /* Cursos */
-.curso h1{
+.curso h1 {
     font-size: 30px;
 
 }
@@ -268,6 +278,7 @@ h3 {
     font-size: 20px;
 
 }
+
 .curso {
     max-width: 900px;
     margin: 0 auto;
@@ -279,14 +290,14 @@ h3 {
 }
 
 .curso-card:hover {
-    box-shadow: 0 4px 10px rgba(194, 21, 55, 0.3); 
-    transform: scale(1.05); 
+    box-shadow: 0 4px 10px rgba(194, 21, 55, 0.3);
+    transform: scale(1.05);
 }
 
 
 .curso-card:active {
-    box-shadow: 0 4px 10px rgba(194, 21, 55, 0.4); 
-    transform: scale(0.98); 
+    box-shadow: 0 4px 10px rgba(194, 21, 55, 0.4);
+    transform: scale(0.98);
 }
 
 
@@ -295,21 +306,22 @@ h3 {
     text-decoration: none;
     color: #000000;
     background-color: #E0700D;
-    display: inline-block; 
+    display: inline-block;
     padding: 10px 20px;
     border-radius: 8px;
-    transition: box-shadow 0.3s ease, transform 0.3s ease; 
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
+
 .matricula:hover {
     box-shadow: 0 4px 10px rgba(194, 21, 55, 0.3);
-    transform: scale(1.05); 
+    transform: scale(1.05);
     background-color: #E0700D;
 }
 
 .matricula:active {
-    box-shadow: 0 4px 10px rgba(194, 21, 55, 0.4); 
-    transform: scale(0.98); 
-    background-color: #9E0B2A; 
+    box-shadow: 0 4px 10px rgba(194, 21, 55, 0.4);
+    transform: scale(0.98);
+    background-color: #9E0B2A;
 }
 
 .curso h1 {
@@ -364,8 +376,8 @@ h3 {
     .curso-card .course-content {
         flex: 1;
         text-align: left;
-        margin:20px;
-        
+        margin: 20px;
+
     }
 }
 
@@ -380,7 +392,7 @@ h3 {
     display: flex;
     gap: 20px;
     flex-wrap: nowrap;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .box {
@@ -392,7 +404,8 @@ h3 {
     width: 400px;
     height: 200px;
     text-align: center;
-    transition: box-shadow 0.3s ease, transform 0.3s ease; }
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
 
 .box h3 {
     font-size: 20px;
@@ -406,11 +419,14 @@ h3 {
 
 
 .box:hover {
-    box-shadow: 0 4px 10px rgba(161, 16, 16, 0.3); 
-    transform: scale(1.05); }
+    box-shadow: 0 4px 10px rgba(161, 16, 16, 0.3);
+    transform: scale(1.05);
+}
+
 .box:active {
-    box-shadow: 0 4px 10px rgba(161, 16, 16, 0.4);     
-    transform: scale(0.98);}
+    box-shadow: 0 4px 10px rgba(161, 16, 16, 0.4);
+    transform: scale(0.98);
+}
 
 /* Responsividade  avaliações*/
 @media (max-width: 1024px) {
@@ -468,12 +484,12 @@ h3 {
     max-width: 900px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-top: 30px;
+    margin-top: 90px;
 }
 
 .empresa h1 {
     font-size: 32px;
-    color:  #E0700D, #E0700D;
+    color: #E0700D, #E0700D;
     margin-bottom: 20px;
 }
 
@@ -484,7 +500,7 @@ h3 {
 }
 
 .empresa p {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.6;
     color: #333;
 }
@@ -547,9 +563,10 @@ h3 {
         line-height: 1.4;
     }
 }
+
 /* Botões */
 .btn-main {
-    margin-top: 20px; 
+    margin-top: 20px;
     padding: 12px 25px;
     background-color: #e0700d;
     color: white;
@@ -558,176 +575,177 @@ h3 {
     font-size: 1rem;
     font-weight: 400;
     transition: background-color 0.3s;
-    z-index: 20; 
-  }
-  
-  .btn-main:hover {
+    z-index: 20;
+}
+
+.btn-main:hover {
     background-color: #c0580a;
-  }
+}
 
 
 
 
-  
-  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
 
-  :root {
-      --color-neutral-0: #0e0c0c;
-      --color-neutral-10: #171717;
-      --color-neutral-30: #a8a29e;
-      --color-neutral-40: #f5f5f5;
-  
-  }
-  
-  * {
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      letter-spacing: 1px;
-  }
-  
-  main {
-      height: 80vh;
-  }
-  
-  footer {
-      width: 100%;
-      color: var(--color-neutral-40);
-      margin-top: 100px;
-  }
-  
-  .footer-link {
-      text-decoration: none;
-  }
-  
-  #footer_content {
-      background-color: var(--color-neutral-10);
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      padding: 3rem 3.5rem;
-    
-  }
-  #footer_content h3 {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
+
+:root {
+    --color-neutral-0: #0e0c0c;
+    --color-neutral-10: #171717;
+    --color-neutral-30: #a8a29e;
+    --color-neutral-40: #f5f5f5;
+
+}
+
+* {
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    letter-spacing: 1px;
+}
+
+main {
+    height: 80vh;
+}
+
+footer {
+    width: 100%;
+    color: var(--color-neutral-40);
+    margin-top: 100px;
+}
+
+.footer-link {
+    text-decoration: none;
+}
+
+#footer_content {
+    background-color: var(--color-neutral-10);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem 3.5rem;
+
+}
+
+#footer_content h3 {
     color: white;
-  }
-  
-  #footer_contacts h1 {
-      margin-bottom: 0.75rem;
-      color: white;
-  }
-  
-  #footer_social_media {
-      display: flex;
-      gap: 2rem;
-      margin-top: 1.5rem;
-  } 
-  
-  #footer_social_media .footer-link {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 2.5rem;
-      width: 2.5rem;
-      color: var(--color-neutral-40);
-      border-radius: 50%;
-      transition: all 0.4s;
-  }
-  
-  #footer_social_media .footer-link i {
-      font-size: 1.25rem;    
-  }
-  
-  #footer_social_media .footer-link:hover {
-      opacity: 0.8;
-  }
-  
-  #instagram {
-      background: linear-gradient(#7f37c9, #ff2992, #ff9807);
-  }
-  
-  #youtube {
-      background-color: #ff0000;
-  }
-  
-  #whatsapp {
-      background-color: #25d366;
-  }
-  
-  .footer-list {
-      display: flex;
-      flex-direction: column;
-      gap: 0.75rem;
-      list-style: none;
-  }
-  
-  .footer-list .footer-link {
-      color: var(--color-neutral-30);
-      transition: all 0.4s;
-  }
-  
-  .footer-list .footer-link:hover {
-      color: #7f37c9;
-  }
-  
-  #footer_subscribe {
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
-  }
-  
-  #footer_subscribe p {
-      color: var(--color-neutral-30);
-  }
-  
-  #input_group {
-      display: flex;
-      align-items: center;
-      background-color: var(--color-neutral-0);
-      border-radius: 4px;
-  }
-  
-  #input_group input {
-      all: unset;
-      padding: 0.75rem;
-      width: 100%;
-  }
-  
-  #input_group button {
-      background-color: #7f37c9;
-      border: none;
-      color: var(--color-neutral-40);
-      padding: 0px 1.25rem;
-      font-size: 1.125rem;
-      height: 100%;
-      border-radius: 0px 4px 4px 0px;
-      cursor: pointer;
-      transition: all 0.4s;
-  }
-  
-  #input_group button:hover {
-      opacity: 0.8;
-  }
-  
-  #footer_copyright {
-      display: flex;
-      justify-content: center;
-      background-color: var(--color-neutral-0);
-      font-size: 0.9rem;
-      padding: 1.5rem;
-      font-weight: 100;
-  }
-  
-  @media screen and (max-width: 768px) {
-      #footer_content {
-          grid-template-columns: repeat(2, 1fr);
-          gap: 2rem;
-      }
-  }
-  
-  @media screen and (max-width: 426px) {
-      #footer_content {
-          grid-template-columns: repeat(1, 1fr);
-          padding: 3rem 2rem;
-      }
-  }
+}
+
+#footer_contacts h1 {
+    margin-bottom: 0.75rem;
+    color: white;
+}
+
+#footer_social_media {
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+}
+
+#footer_social_media .footer-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: var(--color-neutral-40);
+    border-radius: 50%;
+    transition: all 0.4s;
+}
+
+#footer_social_media .footer-link i {
+    font-size: 1.25rem;
+}
+
+#footer_social_media .footer-link:hover {
+    opacity: 0.8;
+}
+
+#instagram {
+    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+}
+
+#youtube {
+    background-color: #ff0000;
+}
+
+#whatsapp {
+    background-color: #25d366;
+}
+
+.footer-list {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
+}
+
+.footer-list .footer-link {
+    color: var(--color-neutral-30);
+    transition: all 0.4s;
+}
+
+.footer-list .footer-link:hover {
+    color: #7f37c9;
+}
+
+#footer_subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+#footer_subscribe p {
+    color: var(--color-neutral-30);
+}
+
+#input_group {
+    display: flex;
+    align-items: center;
+    background-color: var(--color-neutral-0);
+    border-radius: 4px;
+}
+
+#input_group input {
+    all: unset;
+    padding: 0.75rem;
+    width: 100%;
+}
+
+#input_group button {
+    background-color: #7f37c9;
+    border: none;
+    color: var(--color-neutral-40);
+    padding: 0px 1.25rem;
+    font-size: 1.125rem;
+    height: 100%;
+    border-radius: 0px 4px 4px 0px;
+    cursor: pointer;
+    transition: all 0.4s;
+}
+
+#input_group button:hover {
+    opacity: 0.8;
+}
+
+#footer_copyright {
+    display: flex;
+    justify-content: center;
+    background-color: var(--color-neutral-0);
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 100;
+}
+
+@media screen and (max-width: 768px) {
+    #footer_content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    #footer_content {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 3rem 2rem;
+    }
+}
