--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,9 @@ h3 {
     margin-top: 10px;
     display: block;
     text-align: center;
-}
+    font-family: 'Inter', sans-serif;}
+    
+  
 
 /* Swiper e Overlay */
 .swiper {
