--- a/css/pagamento.css
+++ b/css/pagamento.css
@@ -1,11 +1,16 @@
-/* Estilos gerais */
+html, body {
+  height: 100%;  /* Garante que o corpo ocupe toda a altura da tela */
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  margin: 0;
-  padding: 0;
-  background-color: rgba(244, 244, 244, 0.5); /* Corrigido */
+  background-color: #f4f4f4;
   color: #333;
+  display: flex;
+  flex-direction: column;  /* Organiza o layout de forma vertical */
 }
 
 header {
@@ -13,6 +18,7 @@ header {
   color: white;
   text-align: center;
   padding: 1em 0;
+  max-height: 10%;
 }
 
 header h1 {
@@ -20,8 +26,10 @@ header h1 {
 }
 
 main {
+  flex: 1;  /* Faz com que o main ocupe o máximo de espaço disponível */
   padding: 20px;
-  max-width: 800px;
+  min-width: 35%;
+  min-height: 90%;
   margin: 20px auto;
   background: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -38,7 +46,15 @@ form label {
 }
 
 form input[type="text"] {
-  width: 100%;
+  width: 35%;
+  padding: 8px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+form input[type="email"] {
+  width: 35%;
   padding: 8px;
   margin: 5px 0;
   border: 1px solid #ccc;
@@ -56,51 +72,12 @@ button {
 }
 
 button:hover {
-  background-color: #c76d00;
-  opacity: 0.8;
+  background-color: #e07d00;
 }
 
 footer {
   text-align: center;
-  padding: 30px 0;
+  padding: 10px 0;
   background-color: #444;
   color: white;
-  margin-top: 20px;
-  width: 100%;
 }
-
-/* Corrigido: combinando os seletores */
-.footer-link {
-  text-decoration: none;
-}
-
-/* Footer Content */
-#footer_content {
-  background-color: var(--color-neutral-10);
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  padding: 3rem 3.5rem;
-}
-
-#footer_content h3 {
-  color: white;
-}
-
-/* Responsividade */
-@media screen and (max-width: 768px) {
-  #footer_content {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
-  }
-}
-
-@media screen and (max-width: 426px) {
-  #footer_content {
-    grid-template-columns: 1fr;
-    padding: 3rem 2rem;
-  }
- 
- 
- 
-}
-
